# flutter_postgres_rust_wrapper

./: .gitignore  NEXT_STEPS.md  README.md  __pubspec.yaml  pubspec.yaml
.dart_tool/: package_config.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/abner/flutter_postgres_rust/flutter_postgre_rust_wrapper/: MainActivity.kt
android/app/src/main/kotlin/io/abner/flutter_postgres_rust/flutter_postgres_rust/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
docker/postgres/: rundocker.bat  rundocker.sh
docker/postgres/scripts/: 0001.create-db.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: flutter_postgres_rust.dart  main.dart
lib/src/: bindings.dart
linux/: CMakeLists.txt  my_application.cc
rust_postgres_wrapper/: .gitignore  Cargo.toml  Makefile  README.md  build.sh  cbindgen.toml  generate_headers.sh  rust_postgres_wrapper.h
rust_postgres_wrapper/src/: lib.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
